--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1 class="red">Email List</h1>
 
         <ul>
-            <li v-for="email in emails">
+            <li v-for="(email, i) in emails">
                 {{email}}
             </li>
         </ul>
